# fastapi-user-management

./: .gitignore  README.md  pyproject.toml
.circleci/: config.yml
app/: __init__.py  main.py
app/config/: __init__.py  database.py
app/controller/: __init__.py  routes.py
app/controller/endpoint/: __init__.py  admin_endpoints.py  authentication_endpoints.py  user_endpoints.py
app/core/: __init__.py  config.py
app/core/setting/: __init__.py  app.py  development.py  production.py  test.py
app/dependency/: __init__.py  database.py
app/model/: __init__.py  role.py  user.py
app/repository/: __init__.py  user_repository.py
app/schema/: __init__.py  user.py
app/security/: __init__.py  jwt_provider.py  role_checker.py  user_principle.py
app/service/: __init__.py  authentication_service.py  user_service.py
tests/: conftest.py
tests/test_endpoint/: __init__.py  test_admin_endpoints.py  test_authentication_endpoints.py  test_user_endpoints.py
tests/utils/: __init__.py  user.py
