[tool.poetry]
name = "fastapi-user-management"
version = "0.1.0"
description = ""
authors = ["Senol Atac"]

[tool.poetry.dependencies]
python = "3.10.2"
fastapi = "^0.78.0"
mysql-connector = "^2.2.9"
SQLAlchemy = "^1.4.36"
bcrypt = "^3.2.2"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.5"
pytest = "^7.1.2"
coverage = "^6.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
